--- a/css/master.css
+++ b/css/master.css
@@ -12988,8 +12988,8 @@ Forside / Index
 
 /* Image box 1 */
 .image-boxes-en {
-  background-image: url("../images/hoodies-aspect.jpg");
-  background-size: contain;
+  background-image: url("../images/tshirt169.jpg");
+  background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
   height: 300px;
@@ -13034,7 +13034,7 @@ Forside / Index
 /* Image box 2 */
 .image-boxes-to {
   background-image: url("../images/hoodies-aspect.jpg");
-  background-size: contain;
+  background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
   height: 300px;
@@ -13081,8 +13081,8 @@ Forside / Index
 
 /* Image box 3 */
 .image-boxes-tre {
-  background-image: url("../images/hoodies-aspect.jpg");
-  background-size: contain;
+  background-image: url("../images/skilte169.png");
+  background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
   height: 300px;
@@ -13126,8 +13126,8 @@ Forside / Index
 
 /* Image box 4 */
 .image-boxes-fire {
-  background-image: url("../images/hoodies-aspect.jpg");
-  background-size: contain;
+  background-image: url("../images/banner169.jpg");
+  background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
   height: 300px;
@@ -13485,6 +13485,10 @@ Skilte
 /* =========================================
 Mobil styles
 =========================================== */
+@media only screen and (max-width: 1024px) {
+  .content-wrapper {
+    width: 100%; } }
+
 @media only screen and (max-width: 600px) {
   /* Generalt */
   h1 {
@@ -13510,7 +13514,7 @@ Mobil styles
   .omos-button {
     width: 80%; }
   .hero-image {
-    height: 25vh; }
+    min-height: auto; }
   .image-boxes-en {
     height: 200px; }
   .image-boxes-to {
