--- a/css/style.scss
+++ b/css/style.scss
@@ -862,6 +862,19 @@ Skilte
 .uk-card-primary {
   background-color: $primary-color;
 }
+
+/* =========================================
+Check out
+=========================================== */
+.checkout-table {
+  h1 {
+    text-transform: uppercase;
+    margin-top: 20px;
+  }
+}
+
+
+
 /* =========================================
 Mobil styles
 =========================================== */
