--- a/css/style.scss
+++ b/css/style.scss
@@ -5,7 +5,7 @@ Generalt
 $primary-color: rgba(52, 66, 119, 1);
 $secondary-color: #E31836;
 $fontface: 'Exo 2', sans-serif;
-$bodycolor: #EAEBEB;
+$bodycolor: #f2fafd;
 
 
 html, body { font-family: 'Exo 2', sans-serif;
@@ -498,7 +498,14 @@ Footer
 }
 .footer-box {
   border-left: 1px solid #000;
+  h2 {
+    text-transform: uppercase;
   }
+}
+.footer .uk-first-column h2 {
+  text-transform: uppercase;
+}
+
 .openinghours {
   ul {
     list-style-type: none;
@@ -554,21 +561,30 @@ Footer
   }
 }
 .navigation {
-  width: 20%;
+  width: 35%;
   position: relative;
 }
 .navigation {
   a {
+    :hover {
+      border-bottom: 1px solid white;
+    }
     li {
         list-style-type: none;
     }
   }
 }
-.navigation a li::before {
-    content: '\f0da';
+.arrow-right-footer {
+  position: absolute;
+  left: 0px;
+}
+.navigation a li {
+  border-bottom: 1px solid transparent;
+  /*  font-family: FontAwesome;
+    content: '\f105';
     display: block;
     position: absolute;
-    left: 0;
+    left: 0; */
 }
 #map {
   height: 400px;
